On RPi hide incompatible options

--- a/resources/script.launch.retropie/resources/language/resource.language.en_gb/strings.po
+++ b/resources/script.launch.retropie/resources/language/resource.language.en_gb/strings.po
@@ -76,6 +76,10 @@ msgctxt "#32041"
 msgid "Enable fast switching"
 msgstr ""
 
+msgctxt "#32042"
+msgid "Unfortunately this option is presently unavailable on the RPi"
+msgstr ""
+
 msgctxt "#32003"
 msgid "CEC Standby Signals"
 msgstr ""
