Tidy up settings dialogs and remove erroneous file

--- a/resources/script.launch.retropie/resources/language/resource.language.en_gb/strings.po
+++ b/resources/script.launch.retropie/resources/language/resource.language.en_gb/strings.po
@@ -8,8 +8,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: alanwww1@kodi.org\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Kodi Translation Team\n"
-"Language-Team: English (http://www.transifex.com/projects/p/xbmc-addons/language/en/)\n"
+"Last-Translator: Hissingshark\n"
+"Language-Team: English (https://github.com/hissingshark/retrOSMCmk2)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "#32001"
-msgid "Remote Exit Key"
+msgid "TV Remote Exit"
 msgstr ""
 
 msgctxt "#32010"
@@ -41,7 +41,7 @@ msgid "Test exit key"
 msgstr ""
 
 msgctxt "#32002"
-msgid "Gamepad Exit Button"
+msgid "Gamepad Exit"
 msgstr ""
 
 msgctxt "#32020"
@@ -69,7 +69,7 @@ msgid "Fast App Switching"
 msgstr ""
 
 msgctxt "#32040"
-msgid "Instantly switch between Kodi and Emulationstation!\nA remote and/or gamepad exit button should be configured"
+msgid "Instantly switch between Kodi and RetriPie!\nA remote and/or gamepad exit button must be configured"
 msgstr ""
 
 msgctxt "#32041"
@@ -81,11 +81,11 @@ msgid "Unfortunately this option is presently unavailable on the RPi"
 msgstr ""
 
 msgctxt "#32003"
-msgid "CEC Standby Signals"
+msgid "CEC Standby"
 msgstr ""
 
 msgctxt "#32030"
-msgid "Kodi may be configured to put a TV/AVR into standby at shutdown\n - unless blocked these signals will happen when launching RetroPie!"
+msgid "Kodi may be configured to put a TV/AVR into standby at shutdown\nUnless blocked these signals will happen when launching RetroPie!"
 msgstr ""
 
 msgctxt "#32031"
@@ -97,7 +97,7 @@ msgid "TV Mode"
 msgstr ""
 
 msgctxt "#32050"
-msgid "Some TVs give a scrambled or flickering picture at launch\n - only use this if you have the problem or you'll induce the same!"
+msgid "Some TVs give a scrambled or flickering picture at launch\nOnly use this if you have the problem or you might get the same!"
 msgstr ""
 
 msgctxt "#32051"
